--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,8 @@
             <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">Download ZIP</a></li>
             <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Download TAR</a></li>
           {% endif %}
-          <li><a class="buttons github" href="{{ site.github.repository_url }}">View On GitHub</a></li>
+          <li><a class="" href="https://ca.linkedin.com/in/ccheung2">My LinkedIn</a></li>
+          <li><a class="" href="https://github.com/carrieklc">My GitHub</a></li>
         </ul>
 
         {% if site.github.is_project_page %}
