--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,13 +27,9 @@
           <li><a class="" href="https://github.com/carrieklc">My GitHub</a></li>
         </ul>
 
-        {% if site.github.is_project_page %}
-          <p class="header">This project is maintained by <a class="header name" href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-
         {% if site.github.is_user_page %}
           <ul>
-            <li><a class="buttons github" href="{{ site.github.owner_url }}">GitHub Profile</a></li>
+            <li><a class="buttons github" href="{{ site.github.owner_url }}">My GitHub</a></li>
           </ul>
         {% endif %}
       </header>
